[package]
name = "adventage-macros"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/3ach/adventage"
license = "MIT"
description = "Advent of Code, easier!"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.41", features = ["full", "parsing", "extra-traits"] }
