[package]
name = "adventage"
version = "0.2.1"
edition = "2021"
repository = "https://www.github.com/3ach/adventage"
license = "MIT"
description = "Advent of Code, easier!"

[dependencies]
adventage-macros = { version = "0.2.1", path = "../adventage-macros" }
dirs = "5.0.1"
reqwest = { version = "0.11.22", features = [ "blocking" ]}
